tests/baselines/reference/tsxElementResolution14.errors.txt
file.tsx(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== file.tsx (1 errors) ====
    declare module JSX {
                   ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    	interface Element { }
    }
    
    interface Obj1 {
    	new(n: string): {};
    }
    var obj1: Obj1;
    <obj1 x={10} />; // OK
    